Revision history for {{$dist->name}}

{{$NEXT}}
          - revert git contributor change from v0.069; opened
            (github) CPAN-API/metacpan-web#1270 instead.

0.069     2014-08-07 02:44:38Z
          - bump prereq on [Git::Contributors] to allow tests to pass when
            running outside of a git repository
          - remove hacks for [ReadmeAnyFromPod], now that the stable release
            is out supporting phase=release
          - fix test failure when installer's ~/.pause cannot be parsed
          - fix test failure on older Dist::Zilla where TestRunners did not
            dump their configuration into metadata
          - now including authors in contributor lists, except for the
            releaser herself

0.068     2014-08-06 04:15:24Z
          - README.pod is now generated only in the repository, after
            release, so it never shows up in the shipped dist
          - include a default .mailmap in the minted dist; invite the user to
            update .mailmap if the contributor data is not quite right
          - avoid errors from in XS-based distributions where a token Makefile.PL
            is included and we try to generate our own over top
          - more directories added to no_index
          - now instead of installing release with [InstallRelease], switch to
            [Run::AfterRelease] with an author-specific PAUSE URL, to help out
            cpanm-reporter
          - adjust the command that updates the .latest symlink, to account
            for @#$!@#$ incompatibilities between implementations of `ln`
          - at last! add [Git::Contributors]

0.067     2014-07-25 01:09:13Z
          - disabled [EnsurePrereqsInstalled] for now - it is too annoying
            getting travis to install everything soon enough!

0.066     2014-07-18 03:25:10Z
          - internally-hardcoded extra arguments to be passed to optional
            plugins are now handled in a more generic way, now encompassing