@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
           - revert git contributor change from v0.069; opened
             (github) CPAN-API/metacpan-web#1270 instead.
+          - order contributors by number of commits, descending
 
 0.069     2014-08-07 02:44:38Z
           - bump prereq on [Git::Contributors] to allow tests to pass when
